# Google_Calender_MCP

./: .gitignore  Dockerfile  README.md  calendar_mcp.py  calendar_server.py  docker-compose.yml  google-calendar-mcp-wrapper.sh  pyproject.toml  run_with_claude.py  setup_auth.py  setup_auth.sh  setup_auth_manual.py
